fix: update websocket to provide market-specific data